# ct-backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_foundation.py  0003_projects.py  0004_prompt_overrides.py  0005_saved_ideas.py  0006_channels.py  0007_calendar_events.py  0008_ab_tests.py  0009_trending_cache.py  0010_project_lifecycle.py
app/: main.py
app/api/: deps.py
app/api/routes/: ab_tests.py  admin_prompts.py  auth.py  calendar.py  channels.py  login.py  projects.py  saved_ideas.py  script_generator.py  seo_description.py  title_suggestor.py  trending.py  users.py  video_idea_gen.py  youtube.py
app/api_wrappers/: open_ai.py  youtube.py
app/core/: config.py  database.py  exceptions.py  logging.py  messages.py  security.py
app/middleware/: logging.py  request_id.py  timing.py
app/models/: __init__.py  ab_test.py  calendar_event.py  channel.py  llm_usage.py  project.py  prompt_override.py  saved_idea.py  trending_cache.py  user.py
app/prompts/: ideas.py  script.py  seo.py  title.py
app/schemas/: ab_test.py  ai.py  auth.py  calendar_event.py  channel.py  project.py  prompt_override.py  saved_idea.py  trending.py  user.py
app/services/: ab_test_service.py  auth_service.py  calendar_service.py  channel_service.py  email_service.py  llm_tracker.py  project_service.py  prompt_override_service.py  saved_idea_service.py  subtitle_service.py  trending_service.py  user_service.py
scripts/: migrate.py  seed_users.py
tests/: conftest.py  test_ab_tests.py  test_admin_prompts.py  test_ai_routes.py  test_auth.py  test_calendar.py  test_channel_stats.py  test_channels.py  test_deps.py  test_foundation.py  test_projects.py  test_saved_ideas.py  test_subtitle_downloader.py  test_thumbnail_downloader.py  test_trending.py  test_users.py
