[tool.poetry]
name = "ct-backend"
version = "0.1.0"
description = "Creator Tools Backend — FastAPI + Poetry"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.30" }
sqlalchemy = "^2.0"
pydantic-settings = "^2.0"
alembic = "^1.13"
python-dotenv = "^1.0"
# PostgreSQL driver (psycopg3 — compatible with Python 3.10+, SQLAlchemy 2.0)
psycopg = { extras = ["binary"], version = "^3.1" }
# Auth
python-jose = { extras = ["cryptography"], version = "^3.3" }
# Logging
loguru = "^0.7"
# Rate limiting
slowapi = "^0.1.9"
# AI / external APIs
openai = "^2.0"
google-api-python-client = ">=2.0.0"
bcrypt = "^5.0.0"
youtube-transcript-api = {version = "^1.2.4", python = ">=3.10,<3.15"}

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8"
pytest = "^8.0"
pytest-asyncio = "^0.23"
black = "^24.0"
isort = "^5.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
